[package]
name = "chamallow"
version = "0.1.0"
authors = ["BuildTools <sadiinso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
min-max-heap = "1.3.0"
hashbrown = "0.9.1"
humantime = "2.1.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'thin'
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
